--- a/.github/workflows/update-media.yml
+++ b/.github/workflows/update-media.yml
@@ -2,7 +2,8 @@ name: Update media.json
 
 on:
   schedule:
-    - cron: '0 3 * * *' # daily at 03:00 UTC
+    # daily at 14:00 WIB
+    - cron: '0 7 * * *' 
   workflow_dispatch:
 
 permissions:
@@ -18,3 +19,12 @@ jobs:
           node-version: 18
       - name: Install (no dependencies)
         run: npm install
+      - name: Update media.json
+        run: npm run fetch-media
+      - name: Commit changes
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add media.json
+          git commit -m "Update media.json"
+          git push
