--- a/.github/workflows/update-media.yml
+++ b/.github/workflows/update-media.yml
@@ -19,12 +19,14 @@ jobs:
           node-version: 18
       - name: Install (no dependencies)
         run: npm install
-      - name: Update media.json
+      - name: Fetch media.json
+        env:
+          FOLDER_ID: ${{ secrets.FOLDER_ID }}
+          API_KEY: ${{ secrets.API_KEY }}
         run: npm run fetch-media
       - name: Commit changes
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add media.json
-          git commit -m "Update media.json"
-          git push
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "chore: update media.json"
+          file_pattern: public/media.json
+
